--- a/BobmooAnd/android/app/src/main/res/values/colors.xml
+++ b/BobmooAnd/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="ic_launcher_background">#FFFFFF</color>
+
+    <color name="white">#FFFFFFFF</color>
+    <color name="black">#FF000000</color>
+    <color name="dark_gray">#FF444444</color>
+    <color name="gray">#FF888888</color>
+
+    <color name="widget_title_color">#FF000000</color>
+    <color name="widget_body_color">#FF555555</color>
 </resources>
