feat: 모든 식당 위젯 추가 (UI 다듬어야함)

--- a/BobmooAnd/android/app/src/main/res/xml/all_cafeterias_widget_info.xml
+++ b/BobmooAnd/android/app/src/main/res/xml/all_cafeterias_widget_info.xml
@@ -2,14 +2,14 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:targetApi="31"
-    android:minWidth="110dp"
+    android:minWidth="250dp"
     android:minHeight="110dp"
-    android:targetCellWidth="2"
+    android:targetCellWidth="4"
     android:targetCellHeight="2"
     android:updatePeriodMillis="0"
-    android:previewImage="@mipmap/ic_launcher"
     android:initialLayout="@layout/glance_default_preview"
-    android:description="@string/meal_widget_description"
+    android:previewImage="@mipmap/ic_launcher"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen">
+    android:widgetCategory="home_screen"
+    android:description="@string/all_cafeterias_widget_description">
 </appwidget-provider>
