--- a/BobmooAnd/android/app/src/main/res/xml/all_cafeterias_widget_info.xml
+++ b/BobmooAnd/android/app/src/main/res/xml/all_cafeterias_widget_info.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:targetApi="31"
+    android:description="@string/all_cafeterias_widget_description"
+    android:initialLayout="@layout/glance_default_preview"
     android:minWidth="320dp"
     android:minHeight="110dp"
+    android:minResizeWidth="325dp"
+    android:minResizeHeight="110dp"
+    android:previewImage="@mipmap/ic_launcher"
+    android:resizeMode="horizontal|vertical"
     android:targetCellWidth="5"
     android:targetCellHeight="2"
     android:updatePeriodMillis="0"
-    android:initialLayout="@layout/glance_default_preview"
-    android:previewImage="@mipmap/ic_launcher"
-    android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen"
-    android:description="@string/all_cafeterias_widget_description">
-</appwidget-provider>
+    tools:targetApi="31" />
